--- a/appointmentapp/templates/home.html
+++ b/appointmentapp/templates/home.html
@@ -11,7 +11,7 @@
   <div class="container text-center mt-5">
     <h1>Welcome to the Home Page!</h1>
     <!-- Create Your Availability Button -->
-    <button class="btn btn-success mt-3" onclick="window.location='{{ url_for('addAvailability') }}'">Create Your Availability</button>
+    <button class="btn btn-danger mt-3" onclick="window.location='{{ url_for('addAvailability') }}'">Create Your Availability</button>
     <button class="btn btn-success mt-3" onclick="window.location='{{ url_for('viewAvailabilities') }}'">View Current Availabilities</button>
   </div>
 
