changed color of button

--- a/appointmentapp/templates/home.html
+++ b/appointmentapp/templates/home.html
@@ -12,7 +12,7 @@
     <h1>Welcome to the Home Page!</h1>
     <!-- Create Your Availability Button -->
     <button class="btn btn-danger mt-3" onclick="window.location='{{ url_for('addAvailability') }}'">Create Your Availability</button>
-    <button class="btn btn-success mt-3" onclick="window.location='{{ url_for('viewAvailabilities') }}'">View Current Availabilities</button>
+    <button class="btn btn-warning mt-3" onclick="window.location='{{ url_for('viewAvailabilities') }}'">View Current Availabilities</button>
   </div>
 
   <!-- Include Bootstrap JS (optional) -->
